Fixed colouring issue with code, changed code windows to have white backgrounds, fixed overlap on hover for text elements

--- a/popup/popup.css
+++ b/popup/popup.css
@@ -144,17 +144,19 @@ html, body{
 }
 
 .botRes:hover{
-    transform: scale(1.05);
+    transform: scale(1.02);
 }
 
 .code{
     border: none;
-    background-color: #1e1e1e;
+    background-color: #f4f4f9;
     resize: none;
     height: auto;
     font-size: 12px;
-    word-wrap: normal;
+    word-wrap: break-word;
     word-break: break-all;
+    white-space: pre-wrap;
+    overflow-wrap: break-word;
     padding: 0 12px 12px 12px;
     margin: 12px 0;
     border-radius: 2px;
@@ -187,4 +189,11 @@ html, body{
 
 .copyButton:hover i {
     transform: scale(1.1);
+}
+
+pre{
+    word-break: break-all;
+    word-wrap: break-word;
+    white-space: pre-wrap;
+    overflow-wrap: break-word;
 }
